--- a/src/styles/menuPage.css
+++ b/src/styles/menuPage.css
@@ -9,3 +9,170 @@
     font-weight: 500;
     font-size: 50px;
 }
+
+.card {
+    --font-color: #323232;
+    --font-color-sub: #666;
+    --bg-color: #fff;
+    --main-color: #323232;
+    --main-focus: #2d8cf0;
+    width: 230px;
+    height: 300px;
+    background: var(--bg-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 30px;
+    gap: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 19ch;
+    flex-wrap: wrap;
+    padding: 5ch;
+    height: 40vh;
+}
+
+;
+
+.card:last-child {
+    justify-content: flex-end;
+}
+
+.card-img {
+    /* clear and add new css */
+    transition: all 0.5s;
+    display: flex;
+    justify-content: center;
+}
+
+.card-img .img {
+    transform: scale(1);
+    position: relative;
+    box-sizing: border-box;
+    width: 140px;
+    height: 140px;
+}
+
+.img {
+    content: '';
+    position: absolute;
+    /* width: 150px; */
+    display: flex;
+    background-repeat: no-repeat;
+    background-image: url('../assets/burger.jpg');
+    background-size: cover;
+    background-position: center;
+    background-clip: border-box;
+}
+
+
+.card-title {
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    color: var(--font-color);
+    padding: .3ch;
+}
+
+.card-subtitle {
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--font-color-sub);
+}
+
+.card-divider {
+    min-width: 100%;
+    border: 1px solid var(--main-color);
+    border-radius: 50px;
+}
+
+.card-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-price {
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--font-color);
+}
+
+.card-price span {
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--font-color-sub);
+}
+
+.card-btn {
+    height: 35px;
+    background: var(--bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 5px;
+    padding: 0 15px;
+    transition: all 0.3s;
+}
+
+.card-btn svg {
+    width: 100%;
+    height: 100%;
+    fill: var(--main-color);
+    transition: all 0.3s;
+}
+
+.card-img:hover {
+    transform: translateY(-3px);
+}
+
+.card-btn:hover {
+    border: 2px solid var(--main-focus);
+}
+
+.card-btn:hover svg {
+    fill: var(--main-focus);
+}
+
+.card-btn:active {
+    transform: translateY(3px);
+}
+
+#content>div.cards-container>div:nth-child(2)>div>div.card-img>div {
+    background-image: url('../assets/t.png');
+}
+
+#content>div.cards-container>div:nth-child(3)>div>div.card-img>div {
+    background-image: url('../assets/p.jpg');
+}
+
+@media screen and (max-width: 768px) {
+    .cards-container {
+        gap: 3rem;
+    }
+
+    .ul-list {
+        /* display: flex ;
+        flex-direction: column;
+        justify-content: center ;
+        align-items: center; */
+        display: grid;
+        place-content: center;
+        margin: 0 auto;
+        min-height: 40vh;
+        padding-left: 15px;
+    }
+}
