--- a/src/styles/menuPage.css
+++ b/src/styles/menuPage.css
@@ -26,6 +26,8 @@
     flex-direction: column;
     justify-content: flex-start;
     padding: 30px;
+    padding-bottom: 5ch;
+
     gap: 10px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -63,8 +65,8 @@
     transform: scale(1);
     position: relative;
     box-sizing: border-box;
-    width: 140px;
-    height: 140px;
+    width: 170px;
+    height: 170px;
 }
 
 .img {
@@ -157,6 +159,21 @@
 
 #content>div.cards-container>div:nth-child(3)>div>div.card-img>div {
     background-image: url('../assets/p.jpg');
+    width: 180px;
+    height: 170px;
+}
+
+#content>div.cards-container>div:nth-child(4)>div>div.card-img>div {
+    background-image: url('../assets/salad.jpg');
+    width: 230px;
+    /* padding: 70px; */
+}
+
+#content>div.cards-container>div:nth-child(5)>div>div.card-img>div {
+    background-image: url('../assets/pepsi.png');
+    background-position: center;
+    width: 70px;
+    min-height: 21vh;
 }
 
 @media screen and (max-width: 768px) {
@@ -174,5 +191,9 @@
         margin: 0 auto;
         min-height: 40vh;
         padding-left: 15px;
+    }
+
+    #content>div.cards-container>div:nth-child(5)>div {
+        padding-bottom: 5ch;
     }
 }
