--- a/src/styles/contactPage.css
+++ b/src/styles/contactPage.css
@@ -28,3 +28,27 @@
     font-weight: 500;
     font-size: 18px;
 }
+
+@media screen and (max-width:768px) {
+    .contact-container {
+        max-width: 80vw;
+        padding: 5ch;
+    }
+
+    .email-form {
+        display: grid;
+        place-content: center;
+        margin: 0 auto;
+        padding: .5ch;
+        font-size: 16px;
+        overflow-wrap: break-word;
+        max-width: 90vw;
+    }
+
+    .map-frame {
+        display: grid;
+        place-content: center;
+        margin: auto;
+        max-width: 70vw;
+    }
+}
