--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -41,6 +41,18 @@ html {
     font-size: 20px;
 }
 
+.ul-list-home {
+    padding-top: 1ch;
+    display: flex;
+    margin: 0;
+    justify-content: space-evenly;
+    gap: 2ch;
+    color: white;
+    font-size: 40px;
+    font-family: MyFont;
+    letter-spacing: 0.1em;
+}
+
 .ul-list {
     padding-top: 1ch;
     display: flex;
@@ -91,7 +103,35 @@ html {
         min-height: 40vh;
         font-size: 40px;
     }
+
+    .ul-list-home {
+        display: flex !important;
+        flex-direction: column;
+        justify-content: center !important;
+        align-items: center;
+        min-height: 40vh;
+        font-size: 40px;
+    }
     .paragraph {
+        text-align: center;
+    }
+
+    .welcome {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width:768px) {
+    .ul-list-home {
+        padding-top: 6ch;
+        font-size: 62px;
+    }
+
+    .welcome{
+        text-align: center;
+    }
+    .paragraph {
+        font-size: 23px;
         text-align: center;
     }
 }
