--- a/src/styles/menuPage.css
+++ b/src/styles/menuPage.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('../fonts/Questrial-Regular.ttf');
+}
 .menu-h1 {
     color: #fff;
     display: grid;
@@ -27,9 +31,8 @@
     justify-content: flex-start;
     padding: 30px;
     padding-bottom: 5ch;
-
+    font-family: 'MyFont';
     gap: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .cards {
