--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -35,8 +35,8 @@ html {
 .paragraph {
     display: grid;
     place-items: center;
-    margin: auto;
-    max-width: fit-content;
+    margin: 0 auto;
+    max-width: 50rem;
     color: rgb(255, 255, 255);
     font-size: 20px;
 }
